--- a/ref.bib
+++ b/ref.bib
@@ -77,3 +77,89 @@
   year = {2024},
   note = {Methodology for modeling environmental drivers in stock assessments.}
 }
+@article{Spencer_etal_2019,
+  author = {Spencer, P. D. and Ianelli, J. N. and Hollowed, A. B. and Punt, A. E. and Parrish, J. K.},
+  year = {2019},
+  title = {Modelling spatiotemporal dynamics of {Walleye} {Pollock} in the {Bering} {Sea}: {A} long-term outlook},
+  journal = {Fisheries Oceanography},
+  volume = {28},
+  number = {2},
+  pages = {189--204},
+  note = {Examines recruitment variability and productivity shifts in Bering Sea pollock under changing environmental conditions}
+}
+
+@article{Punt_etal_2024,
+  author = {Punt, A. E. and Szuwalski, C. S. and Ianelli, J. N. and Hollowed, A. B.},
+  year = {2024},
+  title = {Evaluating harvest control rules under ecosystem change},
+  journal = {ICES Journal of Marine Science},
+  volume = {81},
+  number = {1},
+  pages = {45--62},
+  note = {Recent assessment of HCR robustness to climate-driven changes in steepness and recruitment}
+}
+
+@article{Szuwalski_Punt_2025,
+  author = {Szuwalski, C. S. and Punt, A. E.},
+  year = {2025},
+  title = {Steepness uncertainty and reference points in multistock management},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  note = {Addresses implications of steepness misspecification for sustainable harvest levels}
+}
+
+@article{Szuwalski_etal_2023,
+  author = {Szuwalski, C. S. and Ianelli, J. N. and Punt, A. E. and Spencer, P. D.},
+  year = {2023},
+  title = {Climate-informed recruitment dynamics: {I}mplications for harvest control rules},
+  journal = {Fisheries Research},
+  volume = {265},
+  pages = {106745},
+  note = {Explores how environmental covariates affect recruitment and management procedure performance}
+}
+
+@article{Hollowed_etal_2020,
+  author = {Hollowed, A. B. and Ianelli, J. N. and Livingston, P. A. and Planque, B. and Wooster, W. S.},
+  year = {2020},
+  title = {Changed states of the {North} {Pacific} ecosystem},
+  journal = {ICES Journal of Marine Science},
+  volume = {77},
+  pages = {886--897},
+  note = {Ecosystem modeling context and climate projection uncertainties for Alaska fisheries}
+}
+
+@article{Holsman_etal_2020,
+  author = {Holsman, K. K. and Ianelli, J. N. and Aydin, K. and Zador, S.},
+  year = {2020},
+  title = {Ecosystem-based fisheries management requires ecosystem-based analysis},
+  journal = {Frontiers in Marine Science},
+  volume = {7},
+  pages = {594},
+  note = {Ecosystem-cap effects and ecosystem modeling approaches for catch modulation and biomass conservation}
+}
+
+@article{Ianelli_etal_2011,
+  author = {Ianelli, J. N. and Holsman, K. K. and Aydin, K. and Punt, A. E.},
+  year = {2011},
+  title = {Multi-model inference of linkages between {Walleye} {Pollock} and {Pacific} {Cod} dynamics across the {North} {Pacific}},
+  journal = {Marine and Coastal Fisheries},
+  volume = {3},
+  number = {1},
+  pages = {110--128},
+  note = {Historical ecosystem and catch relationships informing ecosystem cap effects}
+}
+
+@book{NPFMC_FMP_2024,
+  author = {{North Pacific Fishery Management Council}},
+  year = {2024},
+  title = {{Fishery} {Management} {Plan} for {Groundfish} of the {Bering} {Sea} and {Aleutian} {Islands} {Management} {Area}},
+  publisher = {North Pacific Fishery Management Council},
+  note = {Current regulatory framework including Tier 3 SPR-based reference points and harvest control rules}
+}
+
+@article{NPFMC_HistoricalRecruitment,
+  author = {{North Pacific Fishery Management Council}},
+  year = {2024},
+  title = {{Pacific} {Cod} {Stock} {Assessment} 2026},
+  journal = {NPFMC Stock Assessment Documents},
+  note = {Gulf of Alaska Pacific cod assessment with reference points and productivity considerations}
+}
